[package]
name = "payment_engine"
version = "0.1.0"
authors = ["Carl Williams <chw@milcon.com>"]
edition = "2021"
description = "Simple toy payments engine"
[dependencies]
"log" = "0.4.14"
"env_logger" = "0.11.3"
clap = { version = "4.5.4", features = ["derive"]}
csv = "1.4.0"
rust_decimal = "1.39.0"
tempfile = "3.24.0"
